--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">searchONmaps</string>
-    <string name="map_key" translatable="false">AIzaSyD-kqkgz9ELXfUJuhlaVXFXWIibJJiXpvw</string>
+    <string name="app_name">yy</string>
+    <string name="map_key" translatable="false">AIzaSyCOJyrLEqaJktcrQYk_xNoA-tXSzdliRW0</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
